--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.7.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "scripts": {
     "start": "node app.js",
